Making signup page.

--- a/views/listings/home.ejs
+++ b/views/listings/home.ejs
@@ -304,7 +304,7 @@ h1{
 </head>
 <body>
 <a  class="logo" target="_blank">
-	<img src="logo.jpeg" alt="">
+	<img src="/images/FINSOCK.jpg" alt="">
 </a>
 
   <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
