--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,1 +1,24 @@
 <% layout("/layouts/boilerplate") %>
+<body>
+    <div class="row mt-3">
+        <h1 class="col-6 offset-2">SignUp on Finsock</h1>
+        <div class="col-8 offset-2">
+            <form action="/signup" method="post" class="needs-validation" novalidate>
+                <div class="mb-3">
+                    <lable for="username" class="form-label">Username</lable>
+                    <input name="username" id="username" type="text" class="form-control" required>
+                <div class="valid-feedback">Looks Good!</div>
+                </div>
+                <div class="mb-3">
+                    <lable for="email" class="form-label">Email</lable>
+                    <input name="email" id="email" type="email" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <lable for="password" class="form-label">Password</lable>
+                    <input name="password" id="pasword" type="password" class="form-control" required>
+                </div>
+                <button class="btn btn-success">SignUp</button>
+            </form>
+        </div>
+    </div>
+</body>
