--- a/views/listings/home.ejs
+++ b/views/listings/home.ejs
@@ -312,10 +312,10 @@ h1{
   <nav class="nav"> 		
 	  <ul class="pt-5">
 		  <li><a href="#">Tracking Expenses</a></li>
-		  <li><a href="#">Managing Debt</a></li>
+		  <li><a href="/managingdebt">Managing Debt</a></li>
 		  <li><a href="#">Financial Goal</a></li>
 		  <li><a href="#">Future Financial Model</a></li>
-		  <li><a href="#">Contact Us</a></li>
+		  <li><a href="/contact">Contact Us</a></li>
 	  </ul>
   </nav>
 
