--- a/views/listings/home.ejs
+++ b/views/listings/home.ejs
@@ -311,7 +311,7 @@ h1{
   <label for="menu-icon"></label>
   <nav class="nav"> 		
 	  <ul class="pt-5">
-		  <li><a href="#">Tracking Expenses</a></li>
+		  <li><a href="/trackingexpense">Tracking Expenses</a></li>
 		  <li><a href="/managingdebt">Managing Debt</a></li>
 		  <li><a href="#">Financial Goal</a></li>
 		  <li><a href="#">Future Financial Model</a></li>
