--- a/views/listings/contact.ejs
+++ b/views/listings/contact.ejs
@@ -1,3 +1,6 @@
+
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -247,3 +250,5 @@
       </div>
     </div>
   </section>
+</body>
+</html>
