--- a/views/listings/contact.ejs
+++ b/views/listings/contact.ejs
@@ -198,9 +198,9 @@
         <div class="card-img-wrapper">
           <img src="sujal.jpg" alt="James Newton">
         </div>
-        <a href="#" class="social-icon"><i class="fa-brands fa-linkedin-in"></i></a>
+        <a href="https://www.linkedin.com/in/sujal-dandhale-894159280?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-icon"><i class="fa-brands fa-linkedin-in"></i></a>
         <div class="card-content-wrapper">
-          <a href="#" class="card-content">
+          <a href="https://www.linkedin.com/in/sujal-dandhale-894159280?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="card-content">
             <h3>Sujal Dandhale</h3>
             <p>Developer</p>
             <div>
