--- a/views/listings/trackingex.ejs
+++ b/views/listings/trackingex.ejs
@@ -94,7 +94,7 @@ a{
     </style>
 </head>
 <body>
-    <header>
+    <header style="margin-top: 90px;">
         <h1 class="title">Expense Tracker App</h1>
     <header>
 
