--- a/views/listings/managingdebt.ejs
+++ b/views/listings/managingdebt.ejs
@@ -39,7 +39,7 @@
 }
 </style>
 <body>
-    <div class="calculator">
+    <div style="margin-top: 20px;" class="calculator">
         
         <h2 id="total"></h2>
         <h1>Debt Predictor</h1>
