--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -92,6 +92,7 @@ ul li a.active , a:hover{
     }
 }
 </style>
+<body>
 <nav>
     <input type="checkbox" id="check" name="" value="">
     <label for="check" id="check-button"><i class="fa fa-bars"></i></label>
@@ -103,3 +104,4 @@ ul li a.active , a:hover{
       <li><a href="/contact"><b>Contact Us</b></a></li>
     </ul>
   </nav>
+</body>
