--- a/views/listings/contact.ejs
+++ b/views/listings/contact.ejs
@@ -1,10 +1,5 @@
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<% layout("/layouts/boilerplate") %>
     <style>
     @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&display=swap");
         @mixin mQ($rem) {
@@ -178,7 +173,7 @@
     <div class="cards">
       <div class="card">
         <div class="card-img-wrapper">
-          <img src="tapas.jpg" alt="Joss Anderson">
+          <img src="/images/tapas.jpg" alt="Joss Anderson">
         </div>
         <a href="https://www.linkedin.com/in/tapas-walde-55995528a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-icon"><i  class="fa-brands fa-linkedin-in"></i></a>
         <div class="card-content-wrapper">
@@ -196,7 +191,7 @@
       </div>
       <div class="card">
         <div class="card-img-wrapper">
-          <img src="sujal.jpg" alt="James Newton">
+          <img src="/images/sujal.jpg" alt="James Newton">
         </div>
         <a href="https://www.linkedin.com/in/sujal-dandhale-894159280?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-icon"><i class="fa-brands fa-linkedin-in"></i></a>
         <div class="card-content-wrapper">
@@ -214,7 +209,7 @@
       </div>
       <div class="card">
         <div class="card-img-wrapper">
-          <img src="va.jpeg" alt="Oliver Jones">
+          <img src="/images/va.jpeg" alt="Oliver Jones">
         </div>
         <a href="https://www.linkedin.com/in/vansh-bamborde-8b5aab31b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-icon"><i class="fa-brands fa-linkedin-in"></i></a>
         <div class="card-content-wrapper">
@@ -232,7 +227,7 @@
       </div>
       <div class="card">
         <div class="card-img-wrapper">
-          <img src="prathamesh.jpg" alt="Noah Wilson">
+          <img src="/images/prathamesh.jpg" alt="Noah Wilson">
         </div>
         <a href="https://www.linkedin.com/in/prathamesh-lande-2a93432a3?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-icon"><i  class="fa-brands fa-linkedin-in"></i></a>
         <div class="card-content-wrapper">
