--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,4 +1,29 @@
 <% layout("/layouts/boilerplate") %>
+ <style>
+        #body{
+            background-image: url("img/pra.jpeg");
+            background-size: cover;
+        }
+        #username,#pasword{
+            width: 35%;
+            background-color:rgb(234, 237, 244);
+            
+        }
+        #login{
+            margin-top: 10px;
+        }
+        #login:hover{
+                background-color:rgb(64, 105, 3);
+            }
+        #pagee{
+            margin-top: 20px;
+        }
+        #pass,#use{
+            font-size: x-large;
+            font-weight: 500;
+        }
+       
+    </style>
 <body>
     <div class="row mt-3">
         <h1 class="col-6 offset-2">LogIn on Finsock</h1>
