--- a/views/listings/managingdebt.ejs
+++ b/views/listings/managingdebt.ejs
@@ -47,8 +47,8 @@
 }
 </style>
 <body>
-    <h2 id="total"></h2>
-    <div class="calculator">
+    <h2 style="margin-top: 100px;" id="total"></h2>
+    <div style="margin-top: 150px;" class="calculator">
         
         
         <h1>Debt Predictor</h1>
