--- a/views/listings/home.ejs
+++ b/views/listings/home.ejs
@@ -327,13 +327,14 @@ p a {
 }
 
 button {
+  height: 50px;
   cursor: pointer;
   border: 0;
   border-radius: 4px;
   font-weight: 600;
   margin: 0 10px;
   width: 200px;
-  padding: 10px 0;
+  padding: 10px 10px;
   box-shadow: 0 0 20px rgba(104, 85, 224, 0.2);
   transition: 0.4s;
 }
