--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,6 +1,6 @@
 <% layout("/layouts/boilerplate") %>
 <body>
-    <div class="row mt-3">
+    <div style="margin-top: 100px !important;" class="row mt-3">
         <h1 class="col-6 offset-2">LogIn on Finsock</h1>
         <div class="col-8 offset-2">
             <form action="/login" method="post" class="needs-validation" novalidate>
