--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -2,7 +2,7 @@
  <style>
             #body{
             
-            background-image: url("img/pra.jpeg");
+            background-image: url("/images/bank.jpg");
             background-size: cover;
             }
             #username,#email,#pasword{
