--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate") %>
  <style>
         #body{
-            background-image: url("/images/bank.jpg");
+            background-image: url("bank.jpg");
             background-size: cover;
         }
         #username,#pasword{
