--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate") %>
  <style>
         #body{
-            background-image: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FSwiss_National_Bank&psig=AOvVaw3iUA1s2c-wnGD-py3Psu3w&ust=1724555988028000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLCB1fjVjIgDFQAAAAAdAAAAABAE");
+            background-image: url("/public/images/bank.jpg");
             background-size: cover;
         }
         #username,#pasword{
