--- a/views/listings/home.ejs
+++ b/views/listings/home.ejs
@@ -378,8 +378,7 @@ button:hover {
 	  <ul class="pt-5">
 		  <li><a href="/trackingexpense">Tracking Expenses</a></li>
 		  <li><a href="/managingdebt">Managing Debt</a></li>
-		  <li><a href="#">Financial Goal</a></li>
-		  <li><a href="#">Future Financial Model</a></li>
+		  <li><a href="/financialgoal">Financial Goal</a></li>
 		  <li><a href="/contact">Contact Us</a></li>
 	  </ul>
   </nav>
