--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,107 +1,142 @@
-<style>
+ <head>
+    <meta charset="utf-8">
+   <title>Responsive Navigation Menu</title>
+    <style>
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
-    margin:0px;
-    padding:0px;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+} 
+nav{
+  display: flex;
+  height: 80px;
+  width: 100%;
+  background: #1b1b1b;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 50px 0 100px;
+  flex-wrap: wrap;
 }
-body{
-    width: 100%;
-    height: 100%;
-    background-image: url("farmer.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 0px 50px;
+nav .logo{
+  color: #fff;
+  font-size: 35px;
+  font-weight: 600;
 }
-    nav{
-    top: 0;
-    z-index: 999;
-    width:100%;
-    height: 80px;
-    background-color: black;
-    background-repeat: no-repeat;
-    background-size: cover;
+nav ul{
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+}
+nav ul li{
+  margin: 0 5px;
+}
+nav ul li a{
+  color: #f2f2f2;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 8px 15px;
+  border-radius: 5px;
+  letter-spacing: 1px;
+  transition: all 0.3s ease;
+}
+nav ul li a.active,
+nav ul li a:hover{
+  color: #111;
+  background: #fff;
+}
+nav .menu-btn i{
+  color: #fff;
+  font-size: 22px;
+  cursor: pointer;
+  display: none;
+}
+input[type="checkbox"]{
+  display: none;
+}
+@media (max-width: 1000px){
+  nav{
+    padding: 0 40px 0 50px;
+  }
+}
+@media (max-width: 920px) {
+  nav .menu-btn i{
+    display: block;
+  }
+  #click:checked ~ .menu-btn i:before{
+    content: "\f00d";
+  }
+  nav ul{
     position: fixed;
-}
-.logo{
-    font-size: 40px;
-    margin:0 100px;
-    line-height: 80px;
-
-}
-.logo a{
-    text-decoration: none;
-    color:white;
-}
-.logo a:hover {
-    background-color: black ;
-}
-ul{
-    float:right;
-    list-style: none;
-}
-ul li{
-    display: inline-block;
-    line-height: 80px;
-}
-ul li:hover {
-    cursor: pointer;
-    color: white;
-}
-ul li a{
-    padding:8px 20px;
+    top: 80px;
+    left: -100%;
+    background: #111;
+    height: 100vh;
+    width: 100%;
+    text-align: center;
+    display: block;
+    transition: all 0.3s ease;
+  }
+  #click:checked ~ ul{
+    left: 0;
+  }
+  nav ul li{
+    width: 100%;
+    margin: 40px 0;
+  }
+  nav ul li a{
+    width: 100%;
+    margin-left: -100%;
+    display: block;
     font-size: 20px;
-    border-radius: 10px;
-    text-decoration: none;
-    color: white;
+    transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  }
+  #click:checked ~ ul li a{
+    margin-left: 0px;
+  }
+  nav ul li a.active,
+  nav ul li a:hover{
+    background: none;
+    color: cyan;
+  }
 }
-ul li a.active , a:hover{
-    background-color: grey;
-    color: white;
+.content{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  z-index: -1;
+  width: 100%;
+  padding: 0 30px;
+  color: #1b1b1b;
 }
-#check-button{
-    float:right;
-    line-height: 80px;
-    margin-right: 10px;
-    font-size: 30px;
-    color:white;
-    display: none;
-}
-#check{
-    display: none;
-}
-#check:checked ~ ul{
-    left:0;
-}
-@media (max-width:813px) {
-    #check-button{
-        display: block;
-    }
-    ul li {
-        display:block;
-        text-align: center;
-       
-    }
-    nav ul{
-      z-index: 999;
-        width: 100%;
-        height: 320px;
-        background-color: white;
-        position: fixed;
-        top:80px;
-        left:-100%;
-    }
-}
-</style>
-<body>
-<nav>
-    <input type="checkbox" id="check" name="" value="">
-    <label for="check" id="check-button"><i class="fa fa-bars"></i></label>
-   <label class="logo"><a href="/">Finsock</a></label>
-   <ul>
-      <li><a href="/managingdebt" ><b>Managing Debt</b></a></li>
-      <li><a href="/trackingexpense"><b>Tracking Expenses</b></a></li>
-      <li><a href="/financialgoal"><b>Financial Goals</b></a></li>
-      <li><a href="/contact"><b>Contact Us</b></a></li>
-    </ul>
-  </nav>
-</body>
+.content div{
+  font-size: 40px;
+  font-weight: 700;
+}</style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body>
+    <nav>
+      <div class="logo">Brand</div>
+      <input type="checkbox" id="click">
+      <label for="click" class="menu-btn">
+        <i class="fas fa-bars"></i>
+      </label>
+      <ul>
+        <li><a class="active" href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#">Feedback</a></li>
+      </ul>
+    </nav>
+    <div class="content">
+      <div>Responsive Navigation Menu Bar Design</div>
+      <div>using only HTML & CSS</div>
+    </div>
+  </body>
