--- a/views/listings/managingdebt.ejs
+++ b/views/listings/managingdebt.ejs
@@ -45,6 +45,10 @@
     display: flex;
     flex-direction: column;
 }
+#btn{
+margin-left:40%;
+margin-top:40%
+}
 </style>
 <body>
     <h2 style="margin-top: 100px;" id="total"></h2>
@@ -67,9 +71,10 @@
         <p>Rate Of Interest on your loan amount :
             <input id="rate" type="number" >
         </p>
-        <input type="submit" class="sub" onclick="save()" id="btn">
+        
         
     </div>
+<input type="submit" class="sub" onclick="save()" id="btn">
     <script>
         function save() {
 
